--- a/python.ipynb
+++ b/python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMfdd5/Eh4rPakl6HGf3HXN",
+      "authorship_tag": "ABX9TyPMs/n1JaWAmat9tqqIWSr2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -99,6 +99,55 @@
             "Os pontos totais do Rodrigo são 24\n",
             "Os pontos totais do Ana são 46\n",
             "Os pontos totais de Ana e Rodrigo são 70\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "aula 3"
+      ],
+      "metadata": {
+        "id": "lFWGQ0qZ6I9D"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "total_de_figurinhas = int(input(\"Digite o total de figurinhas: \"))\n",
+        "numero_de_amigos = int(input(\"Digite o número de amigos: \"))\n",
+        "\n",
+        "figurinhas_amigo = total_de_figurinhas // (numero_de_amigos + 2)\n",
+        "figurinhas_joao = 2 * figurinhas_amigo\n",
+        "\n",
+        "figurinhas_extras = int(input(\"Digite o número de figurinhas extras: \"))\n",
+        "figurinhas_extras = figurinhas_extras // (numero_de_amigos + 2)\n",
+        "\n",
+        "figurinhas_joao2 = figurinhas_extras * 2\n",
+        "\n",
+        "\n",
+        "print(f\"João recebeu {figurinhas_joao} figurinhas\")\n",
+        "print(f\"João recebeu {figurinhas_joao2} figurinhas extras\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GL1sYe5R6LaE",
+        "outputId": "4d6b7188-993f-49b8-e779-6ce97078341e"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite o total de figurinhas: 250\n",
+            "Digite o número de amigos: 6\n",
+            "Digite o número de figurinhas extras: 50\n",
+            "João recebeu 62 figurinhas\n",
+            "João recebeu 12 figurinhas extras\n"
           ]
         }
       ]
