--- a/python.ipynb
+++ b/python.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPMs/n1JaWAmat9tqqIWSr2",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyM24YXFOogVcGm2QVIrc2WM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -90,7 +91,7 @@
         "id": "gDi-bvV02VqY",
         "outputId": "f535bcdd-6c0d-48ef-f3d6-31efdce0551e"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,7 +138,7 @@
         "id": "GL1sYe5R6LaE",
         "outputId": "4d6b7188-993f-49b8-e779-6ce97078341e"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -151,6 +152,33 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Aula 4 ⚓ ⚽ ⚾\n",
+        "\n",
+        "dia de prova"
+      ],
+      "metadata": {
+        "id": "4NOx6dAj3wgt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "v19U-JJ54c5i"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "heJSla7Z5LZh"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
