--- a/python.ipynb
+++ b/python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM24YXFOogVcGm2QVIrc2WM",
+      "authorship_tag": "ABX9TyNZbXnToh1p0E3pyvElGJBN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -173,12 +173,37 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "P = int(input(\"Digite a posição da porta P (0 ou 1): \"))\n",
+        "R = int(input(\"Digite a posição da porta R (0 ou 1): \"))\n",
+        "\n",
+        "if P == 0:\n",
+        "    print(\"C\")\n",
+        "elif R == 1:\n",
+        "    print(\"A\")\n",
+        "else:\n",
+        "    print(\"B\")\n",
+        ""
+      ],
       "metadata": {
-        "id": "heJSla7Z5LZh"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Gl1B6Ekp7iKd",
+        "outputId": "c0d2eec7-6db8-48ee-d2f5-b0e7ab132379"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite a posição da porta P (0 ou 1): 0\n",
+            "Digite a posição da porta R (0 ou 1): 1\n",
+            "C\n"
+          ]
+        }
+      ]
     }
   ]
 }
