--- a/python.ipynb
+++ b/python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNZbXnToh1p0E3pyvElGJBN",
+      "authorship_tag": "ABX9TyN8Z1oU6aHyFOdwLMzoVk1F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -182,8 +182,7 @@
         "elif R == 1:\n",
         "    print(\"A\")\n",
         "else:\n",
-        "    print(\"B\")\n",
-        ""
+        "    print(\"B\")\n"
       ],
       "metadata": {
         "colab": {
@@ -192,7 +191,7 @@
         "id": "Gl1B6Ekp7iKd",
         "outputId": "c0d2eec7-6db8-48ee-d2f5-b0e7ab132379"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,6 +200,137 @@
             "Digite a posição da porta P (0 ou 1): 0\n",
             "Digite a posição da porta R (0 ou 1): 1\n",
             "C\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "aula 5 - cálculo de IMC"
+      ],
+      "metadata": {
+        "id": "lwotMdvzC_Sn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "peso = float(input(\"Digite seu peso (em kg): \"))\n",
+        "altura = float(input(\"Digite sua altura (em metros): \"))\n",
+        "imc = peso / (altura ** 2)\n",
+        "print(f\"\\nSeu IMC é: {imc:.2f}\")\n",
+        "if imc < 18.5:\n",
+        "    print(\"Você está abaixo do peso.\")\n",
+        "elif 18.5 <= imc < 25:\n",
+        "    print(\"Você está no peso ideal.\")\n",
+        "elif 25 <= imc < 30:\n",
+        "    print(\"Você está com sobrepeso.\")\n",
+        "else:\n",
+        "    print(\"Você está acima do peso.\")"
+      ],
+      "metadata": {
+        "id": "cEKJV9SbEDm8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "aula 6 tabuada"
+      ],
+      "metadata": {
+        "id": "L-pYTydyEIkD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def tabuada(numero):\n",
+        "    for contador in range(1, 11):  # Gera números de 1 a 10\n",
+        "        print(f\"{numero} x {contador} = {numero * contador}\")\n",
+        "numero = int(input(\"Digite um número para ver sua tabuada: \"))\n",
+        "tabuada(numero)"
+      ],
+      "metadata": {
+        "id": "6OZhGEJREMyj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "aula 7 idade"
+      ],
+      "metadata": {
+        "id": "dDE2gWX-EZcZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calcula_idade_maior(idade_monica, idade_filho1, idade_filho2):\n",
+        "idade_filho3 = idade_monica - idade_filho1 – idade_filho2\n",
+        "idade_maxima = max(idade_filho1, idade_filho2, idade_filho3)\n",
+        "return idade_filho3, idade_maxima\n",
+        "resultado = calcula_idade_maior(68, 12, 30)\n",
+        "print(resultado)"
+      ],
+      "metadata": {
+        "id": "UPiaEX5pEbM5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*aula8"
+      ],
+      "metadata": {
+        "id": "wVpGlnNxEpUf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"sou seu asistente virtual \\n\")\n",
+        "nome = input(\"digite seu nome: \")\n",
+        "print(f\"ola {nome}, em que posso ajudar?\")\n",
+        "resposta = input(\"qual assunto voce deseja tratar? Matematica, python ou javascrip\")\n",
+        "if resposta==\"python\":\n",
+        "  print(\"Ótimo, vamos falar sobre Python!\")\n",
+        "  print(\"\")\n",
+        "elif resposta==\"matemática\":\n",
+        "  print(\"Perfeito, vamos resolver umas questões de matemática!\")\n",
+        "elif resposta==\"história\":\n",
+        "  print(\"Que legal, vamos conversar sobre javascript!\")\n",
+        "else:\n",
+        "  print(\"Hum, não sei falar sobre esse assunto \")\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6a2VXFt5EsvO",
+        "outputId": "358ea9e9-ef0c-4ee7-9f1a-88b66a852822"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "sou seu asistente virtual \n",
+            "\n",
+            "digite seu nome: kauã\n",
+            "ola kauã, em que posso ajudar?\n",
+            "qual assunto voce deseja tratar? Matematica, python ou javascripmatematica\n",
+            "Hum, não sei falar sobre esse assunto \n"
           ]
         }
       ]
